--- a/lesson-7/Змейка/lesson7/lesson7.css
+++ b/lesson-7/Змейка/lesson7/lesson7.css
@@ -26,6 +26,9 @@ td.game-table-cell{
 .food-unit{
     background-color: red;
 }
+.block-unit{
+    background-color: black;
+}
 .buttons{
     display: inline-block;
 }
